--- a/api/src/Box9.Leds.Manager.Api/packages.config
+++ b/api/src/Box9.Leds.Manager.Api/packages.config
@@ -16,6 +16,7 @@
   <package id="Microsoft.Owin.Cors" version="3.0.1" targetFramework="net461" />
   <package id="Microsoft.Owin.FileSystems" version="3.0.1" targetFramework="net461" />
   <package id="Microsoft.Owin.Host.SystemWeb" version="3.0.1" targetFramework="net461" />
+  <package id="Microsoft.Owin.Hosting" version="3.0.1" targetFramework="net461" />
   <package id="Microsoft.Owin.StaticFiles" version="3.0.1" targetFramework="net461" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net461" />
