--- a/api/src/Box9.Leds.Manager.DataAccess/Box9.Leds.Manager.DataAccess.csproj
+++ b/api/src/Box9.Leds.Manager.DataAccess/Box9.Leds.Manager.DataAccess.csproj
@@ -80,6 +80,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Actions\AppPreferencesActions.cs" />
     <Compile Include="Actions\ProjectActions.cs" />
     <Compile Include="Autofac\DataAccessModule.cs" />
     <Compile Include="DataAccessAction.cs" />
@@ -87,10 +88,14 @@
     <Compile Include="Extensions\IDbConnectionExtensions.cs" />
     <Compile Include="IDataModel.cs" />
     <Compile Include="IDataAccessDispatcher.cs" />
+    <Compile Include="Models\AppPreferences.cs" />
+    <Compile Include="Models\Device.cs" />
     <Compile Include="Models\Project.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Scripts\0003_CreateDeviceTable.cs" />
     <Compile Include="Scripts\0001_CreateProjectTable.cs" />
     <Compile Include="Scripts\0002_AddProjectNameColumn.cs" />
+    <Compile Include="Scripts\0004_CreateAppPreferencesTable.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
