--- a/api/src/Box9.Leds.Manager.Services/Box9.Leds.Manager.Services.csproj
+++ b/api/src/Box9.Leds.Manager.Services/Box9.Leds.Manager.Services.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{9EC478A1-28A1-4D7F-AE59-2DA56BE36D98}</ProjectGuid>
+    <ProjectGuid>{B88D81D9-EB78-4B61-A191-1FC4E00DBFAE}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Box9.Leds.Manager.Core</RootNamespace>
-    <AssemblyName>Box9.Leds.Manager.Core</AssemblyName>
+    <RootNamespace>Box9.Leds.Manager.Services</RootNamespace>
+    <AssemblyName>Box9.Leds.Manager.Services</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -35,7 +35,6 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
-    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -45,21 +44,26 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Autofac\CoreModule.cs" />
-    <Compile Include="Config\Configuration.cs" />
-    <Compile Include="Config\IConfiguration.cs" />
-    <Compile Include="Logging\ILogger.cs" />
-    <Compile Include="Logging\Logger.cs" />
-    <Compile Include="Validation\Guard.cs" />
-    <Compile Include="Validation\GuardDoubleExtensions.cs" />
-    <Compile Include="Validation\GuardIntExtensions.cs" />
-    <Compile Include="Validation\GuardStringExtensions.cs" />
-    <Compile Include="Validation\GuardThis.cs" />
-    <Compile Include="Validation\IValidatable.cs" />
+    <Compile Include="Autofac\ServicesModule.cs" />
+    <Compile Include="DeviceSearch\DeviceSearchService.cs" />
+    <Compile Include="DeviceSearch\DiscoveredDevice.cs" />
+    <Compile Include="DeviceSearch\AppPreferencesExtensions.cs" />
+    <Compile Include="DeviceSearch\IDeviceSearchService.cs" />
+    <Compile Include="DeviceSearch\DeviceSearchStatus.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Box9.Leds.Manager.Core\Box9.Leds.Manager.Core.csproj">
+      <Project>{9EC478A1-28A1-4D7F-AE59-2DA56BE36D98}</Project>
+      <Name>Box9.Leds.Manager.Core</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Box9.Leds.Manager.DataAccess\Box9.Leds.Manager.DataAccess.csproj">
+      <Project>{0f776d21-878c-4c2e-9681-e0816e1c3769}</Project>
+      <Name>Box9.Leds.Manager.DataAccess</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
