Bug fixes for creating project devices

--- a/api/src/Box9.Leds.Manager.Api/Box9.Leds.Manager.Api.csproj
+++ b/api/src/Box9.Leds.Manager.Api/Box9.Leds.Manager.Api.csproj
@@ -184,6 +184,7 @@
   <ItemGroup>
     <Compile Include="Autofac\ApiModule.cs" />
     <Compile Include="Controllers\AppPreferencesController.cs" />
+    <Compile Include="Controllers\ProjectDeviceVersionController.cs" />
     <Compile Include="Controllers\DevicesController.cs" />
     <Compile Include="Controllers\ProjectsController.cs" />
     <Compile Include="EmptyResult.cs" />
