--- a/api/src/Box9.Leds.Manager.DataAccess/Box9.Leds.Manager.DataAccess.csproj
+++ b/api/src/Box9.Leds.Manager.DataAccess/Box9.Leds.Manager.DataAccess.csproj
@@ -81,7 +81,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Actions\AppPreferencesActions.cs" />
+    <Compile Include="Actions\DeviceActions.cs" />
     <Compile Include="Actions\ProjectActions.cs" />
+    <Compile Include="Actions\ProjectDeviceVersionActions.cs" />
     <Compile Include="Autofac\DataAccessModule.cs" />
     <Compile Include="DataAccessAction.cs" />
     <Compile Include="DataAccessDispatcher.cs" />
@@ -91,12 +93,15 @@
     <Compile Include="Models\AppPreferences.cs" />
     <Compile Include="Models\Device.cs" />
     <Compile Include="Models\Project.cs" />
+    <Compile Include="Models\ProjectDevice.cs" />
+    <Compile Include="Models\ProjectDeviceVersion.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Scripts\0003_CreateDeviceTable.cs" />
     <Compile Include="Scripts\0001_CreateProjectTable.cs" />
     <Compile Include="Scripts\0002_AddProjectNameColumn.cs" />
     <Compile Include="Scripts\0004_CreateAppPreferencesTable.cs" />
     <Compile Include="Scripts\0005_CreateProjectDeviceTable.cs" />
+    <Compile Include="Scripts\0006_CreateProjectDeviceVersionTable.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
