--- a/api/src/Box9.Leds.Manager.DataAccess/Box9.Leds.Manager.DataAccess.csproj
+++ b/api/src/Box9.Leds.Manager.DataAccess/Box9.Leds.Manager.DataAccess.csproj
@@ -83,7 +83,7 @@
     <Compile Include="Actions\AppPreferencesActions.cs" />
     <Compile Include="Actions\DeviceActions.cs" />
     <Compile Include="Actions\ProjectActions.cs" />
-    <Compile Include="Actions\ProjectDeviceVersionActions.cs" />
+    <Compile Include="Actions\ProjectDeviceActions.cs" />
     <Compile Include="Autofac\DataAccessModule.cs" />
     <Compile Include="DataAccessAction.cs" />
     <Compile Include="DataAccessDispatcher.cs" />
@@ -95,6 +95,7 @@
     <Compile Include="Models\Project.cs" />
     <Compile Include="Models\ProjectDevice.cs" />
     <Compile Include="Models\ProjectDeviceVersion.cs" />
+    <Compile Include="Models\ProjectDeviceVersionMapping.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Scripts\0003_CreateDeviceTable.cs" />
     <Compile Include="Scripts\0001_CreateProjectTable.cs" />
@@ -102,6 +103,7 @@
     <Compile Include="Scripts\0004_CreateAppPreferencesTable.cs" />
     <Compile Include="Scripts\0005_CreateProjectDeviceTable.cs" />
     <Compile Include="Scripts\0006_CreateProjectDeviceVersionTable.cs" />
+    <Compile Include="Scripts\0007_CreateProjectDeviceVersionMappingTable.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
