--- a/api/src/Box9.Leds.Manager.DataAccess/Box9.Leds.Manager.DataAccess.csproj
+++ b/api/src/Box9.Leds.Manager.DataAccess/Box9.Leds.Manager.DataAccess.csproj
@@ -52,8 +52,8 @@
       <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="InstaSqlite, Version=1.0.7.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\InstaSqlite.1.0.7\lib\net461\InstaSqlite.dll</HintPath>
+    <Reference Include="InstaSqlite, Version=1.0.10.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\InstaSqlite.1.0.10\lib\net461\InstaSqlite.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
@@ -84,6 +84,7 @@
     <Compile Include="Actions\DeviceActions.cs" />
     <Compile Include="Actions\ProjectActions.cs" />
     <Compile Include="Actions\ProjectDeviceActions.cs" />
+    <Compile Include="Actions\VideoActions.cs" />
     <Compile Include="Autofac\DataAccessModule.cs" />
     <Compile Include="DataAccessAction.cs" />
     <Compile Include="DataAccessDispatcher.cs" />
@@ -96,6 +97,7 @@
     <Compile Include="Models\ProjectDevice.cs" />
     <Compile Include="Models\ProjectDeviceVersion.cs" />
     <Compile Include="Models\ProjectDeviceVersionMapping.cs" />
+    <Compile Include="Models\VideoReference.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Scripts\0003_CreateDeviceTable.cs" />
     <Compile Include="Scripts\0001_CreateProjectTable.cs" />
@@ -104,6 +106,9 @@
     <Compile Include="Scripts\0005_CreateProjectDeviceTable.cs" />
     <Compile Include="Scripts\0006_CreateProjectDeviceVersionTable.cs" />
     <Compile Include="Scripts\0007_CreateProjectDeviceVersionMappingTable.cs" />
+    <Compile Include="Scripts\0008_CreateVideoReferenceTable.cs" />
+    <Compile Include="Scripts\Discovery\IScriptDiscovery.cs" />
+    <Compile Include="Scripts\Discovery\ScriptDiscovery.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
