--- a/api/src/Box9.Leds.Manager.Core/Box9.Leds.Manager.Core.csproj
+++ b/api/src/Box9.Leds.Manager.Core/Box9.Leds.Manager.Core.csproj
@@ -48,6 +48,7 @@
     <Compile Include="Autofac\CoreModule.cs" />
     <Compile Include="Config\Configuration.cs" />
     <Compile Include="Config\IConfiguration.cs" />
+    <Compile Include="Equality\EqualityExtensions.cs" />
     <Compile Include="Logging\ILogger.cs" />
     <Compile Include="Logging\Logger.cs" />
     <Compile Include="Validation\Guard.cs" />
