--- a/api/src/Box9.Leds.Manager.Api/Web.config
+++ b/api/src/Box9.Leds.Manager.Api/Web.config
@@ -57,6 +57,10 @@
         <assemblyIdentity name="System.Web.Http.Owin" publicKeyToken="31bf3856ad364e35" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-5.2.3.0" newVersion="5.2.3.0" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Data.SQLite" publicKeyToken="db937bc2d44ff139" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-1.0.104.0" newVersion="1.0.104.0" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
 <system.webServer>
