--- a/api/src/Box9.Leds.Manager.Api/packages.config
+++ b/api/src/Box9.Leds.Manager.Api/packages.config
@@ -4,6 +4,9 @@
   <package id="Autofac.Owin" version="4.0.0" targetFramework="net461" />
   <package id="Autofac.WebApi2" version="4.0.1" targetFramework="net461" />
   <package id="Autofac.WebApi2.Owin" version="4.0.0" targetFramework="net461" />
+  <package id="Hangfire" version="1.6.9" targetFramework="net461" />
+  <package id="Hangfire.Core" version="1.6.9" targetFramework="net461" />
+  <package id="Hangfire.SqlServer" version="1.6.9" targetFramework="net461" />
   <package id="Microsoft.AspNet.Cors" version="5.2.3" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net461" />
@@ -20,12 +23,12 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net461" />
   <package id="NJsonSchema" version="8.9.6275.22295" targetFramework="net461" />
-  <package id="NSwag.Annotations" version="9.9.6275.31888" targetFramework="net461" />
-  <package id="NSwag.AspNet.Owin" version="9.9.6275.31889" targetFramework="net461" />
-  <package id="NSwag.AspNet.WebApi" version="9.9.6275.31899" targetFramework="net461" />
-  <package id="NSwag.Core" version="9.9.6275.31887" targetFramework="net461" />
-  <package id="NSwag.SwaggerGeneration" version="9.9.6275.31889" targetFramework="net461" />
-  <package id="NSwag.SwaggerGeneration.WebApi" version="9.9.6275.31889" targetFramework="net461" />
+  <package id="NSwag.Annotations" version="9.10.6277.17570" targetFramework="net461" />
+  <package id="NSwag.AspNet.Owin" version="9.10.6277.17571" targetFramework="net461" />
+  <package id="NSwag.AspNet.WebApi" version="9.10.6277.17580" targetFramework="net461" />
+  <package id="NSwag.Core" version="9.10.6277.17570" targetFramework="net461" />
+  <package id="NSwag.SwaggerGeneration" version="9.10.6277.17571" targetFramework="net461" />
+  <package id="NSwag.SwaggerGeneration.WebApi" version="9.10.6277.17571" targetFramework="net461" />
   <package id="Owin" version="1.0" targetFramework="net461" />
   <package id="SimpleMapping" version="1.0.8" targetFramework="net461" />
 </packages>
