--- a/api/src/Box9.Leds.Manager.DataAccess.Tests/Box9.Leds.Manager.DataAccess.Tests.csproj
+++ b/api/src/Box9.Leds.Manager.DataAccess.Tests/Box9.Leds.Manager.DataAccess.Tests.csproj
@@ -37,6 +37,24 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x86'">
+    <DebugSymbols>true</DebugSymbols>
+    <OutputPath>bin\x86\Debug\</OutputPath>
+    <DefineConstants>DEBUG;TRACE</DefineConstants>
+    <DebugType>full</DebugType>
+    <PlatformTarget>x86</PlatformTarget>
+    <ErrorReport>prompt</ErrorReport>
+    <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x86'">
+    <OutputPath>bin\x86\Release\</OutputPath>
+    <DefineConstants>TRACE</DefineConstants>
+    <Optimize>true</Optimize>
+    <DebugType>pdbonly</DebugType>
+    <PlatformTarget>x86</PlatformTarget>
+    <ErrorReport>prompt</ErrorReport>
+    <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="Dapper, Version=1.50.2.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\Dapper.1.50.2\lib\net451\Dapper.dll</HintPath>
@@ -120,7 +138,7 @@
       <Name>Box9.Leds.Manager.Core</Name>
     </ProjectReference>
     <ProjectReference Include="..\Box9.Leds.Manager.DataAccess\Box9.Leds.Manager.DataAccess.csproj">
-      <Project>{0F776D21-878C-4C2E-9681-E0816E1C3769}</Project>
+      <Project>{0f776d21-878c-4c2e-9681-e0816e1c3769}</Project>
       <Name>Box9.Leds.Manager.DataAccess</Name>
     </ProjectReference>
   </ItemGroup>
