--- a/api/src/Box9.Leds.Manager.WebHost/App.config
+++ b/api/src/Box9.Leds.Manager.WebHost/App.config
@@ -44,6 +44,14 @@
         <assemblyIdentity name="System.Data.SQLite" publicKeyToken="db937bc2d44ff139" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-1.0.104.0" newVersion="1.0.104.0" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="NSwag.AspNet.Owin" publicKeyToken="c2d88086e098d109" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-9.10.6277.17571" newVersion="9.10.6277.17571" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="NSwag.SwaggerGeneration.WebApi" publicKeyToken="c2d88086e098d109" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-9.10.6277.17571" newVersion="9.10.6277.17571" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
 </configuration>
