--- a/api/src/Nuget.config
+++ b/api/src/Nuget.config
@@ -7,5 +7,6 @@
     <add key="Nuget" value="https://www.nuget.org/api/v2/" />
     <add key="InstaSQLite" value="https://ci.appveyor.com/nuget/instasqlite-l69e46sgeudv" />
     <add key="SimpleMapping" value="https://ci.appveyor.com/nuget/simplemapping-ied7p79ov74m" />
+    <add key="Box9dPiApi" value="https://ci.appveyor.com/nuget/box9d-pi-api-g8pydb2m75yo" />
   </packageSources>
 </configuration>
