--- a/api/src/Box9.Leds.Manager.DataAccess/Box9.Leds.Manager.DataAccess.csproj
+++ b/api/src/Box9.Leds.Manager.DataAccess/Box9.Leds.Manager.DataAccess.csproj
@@ -31,6 +31,24 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x86'">
+    <DebugSymbols>true</DebugSymbols>
+    <OutputPath>bin\x86\Debug\</OutputPath>
+    <DefineConstants>DEBUG;TRACE</DefineConstants>
+    <DebugType>full</DebugType>
+    <PlatformTarget>x86</PlatformTarget>
+    <ErrorReport>prompt</ErrorReport>
+    <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x86'">
+    <OutputPath>bin\x86\Release\</OutputPath>
+    <DefineConstants>TRACE</DefineConstants>
+    <Optimize>true</Optimize>
+    <DebugType>pdbonly</DebugType>
+    <PlatformTarget>x86</PlatformTarget>
+    <ErrorReport>prompt</ErrorReport>
+    <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="Autofac, Version=4.4.0.0, Culture=neutral, PublicKeyToken=17863af14b0044da, processorArchitecture=MSIL">
       <HintPath>..\packages\Autofac.4.4.0\lib\net45\Autofac.dll</HintPath>
@@ -50,14 +68,6 @@
     </Reference>
     <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
       <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="Hangfire.Core, Version=1.6.9.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Hangfire.Core.1.6.9\lib\net45\Hangfire.Core.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="Hangfire.SQLite, Version=1.1.1.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Hangfire.SQLite.1.1.1.0\lib\net45\Hangfire.SQLite.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="InstaSqlite, Version=1.0.11.0, Culture=neutral, processorArchitecture=MSIL">
@@ -97,7 +107,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Actions\AppPreferencesActions.cs" />
+    <Compile Include="Actions\BackgroundJobActions.cs" />
     <Compile Include="Actions\DeviceActions.cs" />
+    <Compile Include="Actions\PiSyncJobActions.cs" />
     <Compile Include="Actions\ProjectActions.cs" />
     <Compile Include="Actions\ProjectDeviceActions.cs" />
     <Compile Include="Actions\VideoActions.cs" />
@@ -105,15 +117,17 @@
     <Compile Include="DataAccessAction.cs" />
     <Compile Include="DataAccessDispatcher.cs" />
     <Compile Include="Extensions\IDbConnectionExtensions.cs" />
-    <Compile Include="Hangfire\HangfireConfigurationExtensions.cs" />
     <Compile Include="IDataModel.cs" />
     <Compile Include="IDataAccessDispatcher.cs" />
     <Compile Include="Models\AppPreferences.cs" />
+    <Compile Include="Models\BackgroundJob.cs" />
     <Compile Include="Models\Device.cs" />
+    <Compile Include="Models\PiSyncJob.cs" />
     <Compile Include="Models\Project.cs" />
     <Compile Include="Models\ProjectDevice.cs" />
     <Compile Include="Models\ProjectDeviceVersion.cs" />
     <Compile Include="Models\ProjectDeviceVersionMapping.cs" />
+    <Compile Include="Models\ProjectVideo.cs" />
     <Compile Include="Models\VideoReference.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Scripts\0003_CreateDeviceTable.cs" />
@@ -124,6 +138,8 @@
     <Compile Include="Scripts\0006_CreateProjectDeviceVersionTable.cs" />
     <Compile Include="Scripts\0007_CreateProjectDeviceVersionMappingTable.cs" />
     <Compile Include="Scripts\0008_CreateVideoReferenceTable.cs" />
+    <Compile Include="Scripts\0010_CreateProjectVideoTable.cs" />
+    <Compile Include="Scripts\0011_CreatePiSyncJobTable.cs" />
     <Compile Include="Scripts\Discovery\IScriptDiscovery.cs" />
     <Compile Include="Scripts\Discovery\ScriptDiscovery.cs" />
   </ItemGroup>
