Stablize inclusion of MediaInfo.dll

--- a/api/.gitignore
+++ b/api/.gitignore
@@ -206,6 +206,7 @@ FakesAssemblies/
 *.ts
 
 # Project specific
-src/**/*.lock.json
 .vscode/**/*
 src/Box9.Leds.Pi.Api/Properties/PublishProfiles/**/*
+!src/Box9.Leds.Manager.Services/x86
+!src/Box9.Leds.Manager.Services/x86/*.dll
