--- a/web/.gitignore
+++ b/web/.gitignore
@@ -6,7 +6,6 @@ typings/
 
 # VSCode
 .vscode/**/*.*
-!.vscode/tasks.json
 
 # Npm debug
 npm-debug.log
@@ -28,6 +27,10 @@ $RECYCLE.BIN/
 # Mac desktop service store files
 .DS_Store
 
+#Yarn 
+yarn.lock
+
 # Project specific
 index.js.map
 src/**/*.js
+dist/**/*
