--- a/api/src/Box9.Leds.Manager.WebHost/App.config
+++ b/api/src/Box9.Leds.Manager.WebHost/App.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
 	<appSettings>
-		<add key="HtmlFilePath" value="..\..\..\..\..\index.html" />
+		<add key="HtmlFilePath" value="..\..\..\..\..\..\web\dist\index.html" />
 	</appSettings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
