Code generation for API client

--- a/api/.gitignore
+++ b/api/.gitignore
@@ -210,3 +210,4 @@ FakesAssemblies/
 src/Box9.Leds.Pi.Api/Properties/PublishProfiles/**/*
 !src/Box9.Leds.Manager.Services/x86
 !src/Box9.Leds.Manager.Services/x86/*.dll
+build/**/*
