--- a/api/src/Box9.Leds.Manager.Api/Box9.Leds.Manager.Api.csproj
+++ b/api/src/Box9.Leds.Manager.Api/Box9.Leds.Manager.Api.csproj
@@ -189,6 +189,7 @@
     <Compile Include="Autofac\ApiModule.cs" />
     <Compile Include="Controllers\AppPreferencesController.cs" />
     <Compile Include="Controllers\DeviceController.cs" />
+    <Compile Include="Controllers\Metadata.cs" />
     <Compile Include="Controllers\ProjectDeviceVersionController.cs" />
     <Compile Include="Controllers\DeviceDiscoveryController.cs" />
     <Compile Include="Controllers\ProjectDeviceMappingController.cs" />
