--- a/appveyor.yml
+++ b/appveyor.yml
@@ -9,7 +9,7 @@ nuget:
   project_feed: true
 before_build:
 - cmd: cd .\api\src && nuget restore
-after build:
+after_build:
 - ps: >-
     cd .\web && npm install
 
