--- a/api/src/Box9.Leds.Manager.Api/Box9.Leds.Manager.Api.csproj
+++ b/api/src/Box9.Leds.Manager.Api/Box9.Leds.Manager.Api.csproj
@@ -188,6 +188,7 @@
   <ItemGroup>
     <Compile Include="Autofac\ApiModule.cs" />
     <Compile Include="Controllers\AppPreferencesController.cs" />
+    <Compile Include="Controllers\BackgroundJobsController.cs" />
     <Compile Include="Controllers\DeviceController.cs" />
     <Compile Include="Controllers\Metadata.cs" />
     <Compile Include="Controllers\ProjectDeviceVersionController.cs" />
