--- a/web/package.json
+++ b/web/package.json
@@ -11,15 +11,16 @@
   "dependencies": {
     "@types/es6-promise": "^0.0.32",
     "@types/react": "^15.0.0",
-    "@types/react-redux": "^4.4.36",
     "@types/react-dom": "^0.14.20",
+    "@types/react-redux": "^4.4.36",
     "es6-promise": "^4.0.5",
     "es6-promise-polyfill": "^1.2.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
-    "reflect-metadata": "^0.1.9",
     "react-redux": "^5.0.2",
-    "semantic-ui-react": "^0.64.7"
+    "reflect-metadata": "^0.1.9",
+    "semantic-ui-react": "^0.64.7",
+    "tsc": "^1.20150623.0"
   },
   "devDependencies": {
     "awesome-typescript-loader": "^3.1.2",
