--- a/api/src/Box9.Leds.Manager.Api/Box9.Leds.Manager.Api.csproj
+++ b/api/src/Box9.Leds.Manager.Api/Box9.Leds.Manager.Api.csproj
@@ -202,6 +202,7 @@
     <Compile Include="Filters\HangfireActionFilter.cs" />
     <Compile Include="GlobalJsonResult.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Responses\VideoMetadataResponse.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
   <ItemGroup>
