--- a/web/package.json
+++ b/web/package.json
@@ -26,7 +26,11 @@
     "awesome-typescript-loader": "^3.1.2",
     "browser-sync": "^2.17.5",
     "browser-sync-webpack-plugin": "^1.1.4",
+    "css-loader": "^0.27.3",
+    "node-sass": "^4.5.0",
+    "sass-loader": "^6.0.3",
     "source-map-loader": "^0.2.0",
+    "style-loader": "^0.14.1",
     "tslint": "^4.4.2",
     "typescript": "^2.2.1",
     "typings": "^1.4.0",
