Implement video upload. Requires fix for corrupted video files on save

--- a/api/src/Box9.Leds.Manager.WebHost/App.config
+++ b/api/src/Box9.Leds.Manager.WebHost/App.config
@@ -2,6 +2,7 @@
 <configuration>
 	<appSettings>
 		<add key="HtmlFilePath" value="..\..\..\..\..\web\dist\index.html" />
+		<add key="VideoUploadTimeoutMilliseconds" value="10000" />
 	</appSettings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
