--- a/api/src/Box9.Leds.Manager.Services/Box9.Leds.Manager.Services.csproj
+++ b/api/src/Box9.Leds.Manager.Services/Box9.Leds.Manager.Services.csproj
@@ -273,6 +273,8 @@
     <Compile Include="VideoProcessing\IVideoProcessor.cs" />
     <Compile Include="VideoProcessing\VideoFileReaderWrapper.cs" />
     <Compile Include="VideoProcessing\VideoProcessor.cs" />
+    <Compile Include="VideoUpload\IVideoUploader.cs" />
+    <Compile Include="VideoUpload\VideoUploader.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
