--- a/api/src/Box9.Leds.Manager.WebHost/packages.config
+++ b/api/src/Box9.Leds.Manager.WebHost/packages.config
@@ -3,6 +3,7 @@
   <package id="Accord" version="3.4.0" targetFramework="net461" />
   <package id="Accord.Video" version="3.4.0" targetFramework="net461" />
   <package id="Accord.Video.FFMPEG" version="3.4.0" targetFramework="net461" />
+  <package id="MediaInfoDotNet" version="0.7.79.40925" targetFramework="net461" />
   <package id="Microsoft.Owin" version="3.0.1" targetFramework="net461" />
   <package id="Microsoft.Owin.Host.HttpListener" version="3.0.1" targetFramework="net461" />
   <package id="Microsoft.Owin.Hosting" version="3.0.1" targetFramework="net461" />
