Add missing media info.dll required for build

--- a/api/.gitignore
+++ b/api/.gitignore
@@ -210,4 +210,6 @@ FakesAssemblies/
 src/Box9.Leds.Pi.Api/Properties/PublishProfiles/**/*
 !src/Box9.Leds.Manager.Services/x86
 !src/Box9.Leds.Manager.Services/x86/*.dll
+!src/Box9.Leds.Manager.WebHost/x86
+!src/Box9.Leds.Manager.WebHost/x86/*.dll
 build/**/*
