--- a/api/src/Box9.Leds.Manager.Services/Box9.Leds.Manager.Services.csproj
+++ b/api/src/Box9.Leds.Manager.Services/Box9.Leds.Manager.Services.csproj
@@ -257,14 +257,11 @@
     <Compile Include="DeviceSearch\Pinger.cs" />
     <Compile Include="DeviceStatus\DeviceStatusService.cs" />
     <Compile Include="DeviceStatus\IDeviceStatusService.cs" />
+    <Compile Include="PiSynchronization\IPiSyncService.cs" />
+    <Compile Include="PiSynchronization\PiSyncService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Queueing\BackgroundProcessor.cs" />
-    <Compile Include="Queueing\IBackgroundProcessor.cs" />
-    <Compile Include="Queueing\IBackgroundJobLogger.cs" />
-    <Compile Include="Queueing\IPiSyncJobProcessor.cs" />
-    <Compile Include="Queueing\BackgroundJobLogger.cs" />
-    <Compile Include="Queueing\Job.cs" />
-    <Compile Include="Queueing\PiSyncJobProcessor.cs" />
+    <Compile Include="JobProcessing\IBackgroundJobsProcessor.cs" />
+    <Compile Include="JobProcessing\BackgroundJobsProcessor.cs" />
     <Compile Include="Store\InMemoryStore.cs" />
     <Compile Include="Store\IStore.cs" />
     <Compile Include="VideoProcessing\BitmapToBinaryProcessor.cs" />
