Add Services Tests project and consolidate nuget packages

--- a/api/src/Box9.Leds.Manager.Services/app.config
+++ b/api/src/Box9.Leds.Manager.Services/app.config
@@ -1,8 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
-    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
   </configSections>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
@@ -42,19 +42,41 @@
         <assemblyIdentity name="System.Web.Cors" publicKeyToken="31bf3856ad364e35" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-5.2.3.0" newVersion="5.2.3.0" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="NSwag.Core" publicKeyToken="c2d88086e098d109" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-9.11.6282.35315" newVersion="9.11.6282.35315" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="NSwag.SwaggerGeneration" publicKeyToken="c2d88086e098d109" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-9.11.6282.35321" newVersion="9.11.6282.35321" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="NJsonSchema" publicKeyToken="c2f9c3bdfae56102" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-8.10.6282.29572" newVersion="8.10.6282.29572" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="NSwag.SwaggerGeneration.WebApi" publicKeyToken="c2d88086e098d109" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-9.11.6282.35321" newVersion="9.11.6282.35321" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="NSwag.AspNet.Owin" publicKeyToken="c2d88086e098d109" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-9.10.6277.17571" newVersion="9.10.6277.17571" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
     <providers>
-      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
       <provider invariantName="System.Data.SQLite.EF6" type="System.Data.SQLite.EF6.SQLiteProviderServices, System.Data.SQLite.EF6" />
+      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
   <system.data>
     <DbProviderFactories>
       <remove invariant="System.Data.SQLite.EF6" />
       <add name="SQLite Data Provider (Entity Framework 6)" invariant="System.Data.SQLite.EF6" description=".NET Framework Data Provider for SQLite (Entity Framework 6)" type="System.Data.SQLite.EF6.SQLiteProviderFactory, System.Data.SQLite.EF6" />
-    <remove invariant="System.Data.SQLite" /><add name="SQLite Data Provider" invariant="System.Data.SQLite" description=".NET Framework Data Provider for SQLite" type="System.Data.SQLite.SQLiteFactory, System.Data.SQLite" /></DbProviderFactories>
+      <remove invariant="System.Data.SQLite" />
+      <add name="SQLite Data Provider" invariant="System.Data.SQLite" description=".NET Framework Data Provider for SQLite" type="System.Data.SQLite.SQLiteFactory, System.Data.SQLite" />
+    </DbProviderFactories>
   </system.data>
 </configuration>
