--- a/api/src/Box9.Leds.Manager.Api/Web.config
+++ b/api/src/Box9.Leds.Manager.Api/Web.config
@@ -67,7 +67,19 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="NSwag.SwaggerGeneration.WebApi" publicKeyToken="c2d88086e098d109" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-9.10.6277.17571" newVersion="9.10.6277.17571" />
+        <bindingRedirect oldVersion="0.0.0.0-9.11.6282.35321" newVersion="9.11.6282.35321" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="NSwag.Core" publicKeyToken="c2d88086e098d109" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-9.11.6282.35315" newVersion="9.11.6282.35315" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="NSwag.SwaggerGeneration" publicKeyToken="c2d88086e098d109" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-9.11.6282.35321" newVersion="9.11.6282.35321" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="NJsonSchema" publicKeyToken="c2f9c3bdfae56102" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-8.10.6282.29572" newVersion="8.10.6282.29572" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
