Allow configurable Pi API port

--- a/api/src/Box9.Leds.Manager.WebHost/App.config
+++ b/api/src/Box9.Leds.Manager.WebHost/App.config
@@ -3,6 +3,7 @@
 	<appSettings>
 		<add key="HtmlFilePath" value="..\..\..\..\..\web\dist\index.html" />
 		<add key="VideoUploadTimeoutMilliseconds" value="10000" />
+		<add key="PiApiPort" value="8002"/>
 	</appSettings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
